# bgglue

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sample_submission/predictions/bsnlp/: predictions.jsonl
sample_submission/predictions/cinexio/: predictions.jsonl
sample_submission/predictions/crediblenews/: predictions.jsonl
sample_submission/predictions/ct21t1/: predictions.jsonl
sample_submission/predictions/examsbg/: predictions.jsonl
sample_submission/predictions/fakenews/: predictions.jsonl
sample_submission/predictions/udep/: predictions.jsonl
sample_submission/predictions/wikiannbg/: predictions.jsonl
sample_submission/predictions/xnlibg/: predictions.jsonl
scripts/: bsnlp_trainer.job  cinexio_regression_trainer.job  clef_trainer.job  crediblenews_trainer.job  exams_trainer.job  fakenews_trainer.job  slurm_hyperparameter_search.sh  udep_trainer.job  wikiann_trainer.job  xnli_trainer.job
src/bg_glue_benchmark/: evaluate.py  metrics_clef.py  run_cinexio.py  run_classification.py  run_clef.py  run_multiple_choice.py  run_tag.py  run_xnli.py
src/bg_glue_benchmark/bgdatasets/bgglue/: bgglue.py
